--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,12 @@
     <string name="email_placeholder">example@gmail.com</string>
     <string name="password_title">Пароль</string>
     <string name="password_placeholder">Введите пароль</string>
+    <string name="label_no_accaunt">"Нету аккаунта? "</string>
     <string name="action_login">Вход</string>
-    <string name="label_no_accaunt">"Нету аккаунте? "</string>
     <string name="action_register">Регистрация</string>
     <string name="action_forget_password">Забыл пароль</string>
+
+    <string name="nav_item_main">Главная</string>
+    <string name="nav_item_favorites">Избранное</string>
+    <string name="nav_item_account">Аккаунт</string>
 </resources>
